[package]
name = "inoda-core"
version = "0.1.0"
edition = "2024"

[dependencies]
cosmic-text = { version = "0.12", default-features = false, features = ["std", "swash"] }
cssparser = "0.36.0"
generational-arena = "0.2.9"
html5gum = "0.5"
phf = { version = "0.11", features = ["macros"] }
rquickjs = { version = "0.11", features = ["macro", "classes"] }
string_cache = "0.9.0"
taffy = "0.9.2"
smallvec = "1.15.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cascade"
harness = false

[[bench]]
name = "layout_measure"
harness = false

[[bench]]
name = "js_roundtrip"
harness = false
